--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ form {
     align-items: center;
 }
 tr {
-    height: 60px;
+    height: 85px;
 }
 td,
 th {
@@ -43,9 +43,6 @@ font-family: inherit;
     flex-direction: column;
     align-items: center;
 }
-.error-container{
-    display: none;
-}
 .gender-input {
     width: 40%;
     display: none;
@@ -77,7 +74,10 @@ input[type="radio"]:checked + .gender-text:before {
 .postcode-input {
     margin-left: 5px;
 }
-.error-text{
+.error-container{
+    margin:5px 0px;
+}
+.error{
     color:red;
 }
 .btn{
